--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "better-sqlite3": "^10.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "zod": "^3.23.8"
   },
@@ -12,13 +13,13 @@
     "@types/better-sqlite3": "^7.6.10",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.12.12",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5",
     "@types/jest": "^29.5.12",
+    "@types/node": "^20.12.12",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.1.5"
+    "ts-jest": "^29.1.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
