--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "test": "jest --detectOpenHandles --runInBand"
+    "test": "jest --detectOpenHandles --runInBand",
+    "cc": "jest --clearCache"
   },
   "dependencies": {
     "better-sqlite3": "^10.0.0",
@@ -10,8 +11,11 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@swc/core": "^1.6.5",
+    "@swc/jest": "^0.2.36",
     "@types/better-sqlite3": "^7.6.10",
     "@types/cors": "^2.8.17",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.12",
