--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test": "jest --detectOpenHandles --runInBand",
+    "test": "cross-env ENVIRONMENT=TEST jest --detectOpenHandles --runInBand",
     "cc": "jest --clearCache"
   },
   "dependencies": {
@@ -20,6 +20,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.12",
     "@types/supertest": "^6.0.2",
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.5",
