--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "helmet": "^8.0.0",
     "ts-node": "^10.9.2",
     "zod": "^3.23.8"
   },
@@ -26,6 +27,7 @@
     "jest": "^29.7.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.5",
+    "tsx": "^4.19.2",
     "typescript": "^5.4.5"
   }
 }
