--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20.12.12",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
@@ -60,11 +61,18 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "jsdom": "^26.0.0",
+    "msw": "^2.7.3",
     "postcss": "^8.4.38",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vitest": "^3.0.9"
+  },
+  "msw": {
+    "workerDirectory": [
+      "",
+      "public"
+    ]
   }
 }
